# tinytapeout-test

./: CMakeLists.txt  LICENSE  info.yaml
.github/workflows/: docs.yaml
rtl/: tb.v  top.v
src/: accumulator.v  apb_register.v  comparator.v  encoder.v  levenshtein.v  pchri03_top.v  spi_controller.v  spi_tester.v  tb.v  test_algo.v  tt_um_pchri03_top.v
tools/: make_data.cpp  run.cpp
